@@ -64,6 +64,7 @@ export(addGraticule)
 export(addLabelOnlyMarkers)
 export(addLayersControl)
 export(addLegend)
+export(addMapPane)
 export(addMarkers)
 export(addMeasure)
 export(addMiniMap)
